--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mern stack",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "app.js",
+    "server": "nodemon app.js"
   },
   "keywords": [
     "nodejs",
@@ -12,5 +13,14 @@
     "express"
   ],
   "author": "Nick Bykon <nikita.bikon@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "config": "^3.3.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.28"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
+  }
 }
